--- a/frontend/src/styles/bootstrap.css
+++ b/frontend/src/styles/bootstrap.css
@@ -66,7 +66,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #55595c;
-  --bs-body-bg: #fff;
+  --bs-body-bg: #f5f5f5;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #eceeef;
