--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -37,7 +37,7 @@
   background-color: #4ade80;
 }
 
-.first_experience {
+.experience {
   background-color: #14532d;
 }
 
@@ -73,4 +73,9 @@
 
 .link {
   text-decoration: none;
+}
+
+textarea {
+  resize: none;
+  max-height: 500px;
 }
